did few minor changes

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
@@ -15,19 +15,18 @@
   </head>
   <body>
     <div class="container">
-        <div class="header">
-            <h1>QR Code Generator</h1>
-            <p>Paste a url or enter text to create QR code</p>
-            <div class="form">
-                <input type="text" placeholder="Enter text or url">
-                <button>Generate QR Code</button>
-            </div>
-            <div class="qr-code">
-                <img src="qrcode.png" alt="qr-code">
-            </div>
+      <div class="header">
+        <h1>QR Code Generator</h1>
+        <p>Paste a url or enter text to create QR code</p>
+        <div class="form">
+          <input type="text" placeholder="Enter text or url" />
+          <button class="btn">Generate QR Code</button>
         </div>
+        <div class="qr-code">
+          <img src="" alt="qr-code" />
+        </div>
+      </div>
     </div>
-
 
     <script src="script.js"></script>
   </body>
